--- a/project/saga/templates/saga/edit.html
+++ b/project/saga/templates/saga/edit.html
@@ -31,88 +31,95 @@ Allow the user to edit a faction and its units if one is supplied
     <h1>Create Faction</h1>
     {% endif %}
 
-    <!--Faction Input Fields-->
-    <label for = "fName">Name:</label>
-    <!--autoescape to read spaces in the faction name-->
-    <input type = "text" id = "fName" value = "{% autoescape off %}{{faction.first.name}}{% endautoescape %}">
-    <br><br>
-    <div style="display: flex; flex-direction: column;">
-        <label for = "fDescription">Description:</label>
-        <textarea id = "fDescription" rows = "5", cols = "30">{{faction.first.description}}</textarea>
+    <!--Faction Form Fields-->
+    <form id = "factionForm">
+        <label for = "fName">Name:</label>
+        <!--autoescape to read spaces in the faction name-->
+        <input type = "text" id = "fName" value = "{% autoescape off %}{{faction.first.name}}{% endautoescape %}">
+        <br><br>
+        <div style="display: flex; flex-direction: column;">
+            <label for = "fDescription">Description:</label>
+            <textarea id = "fDescription" rows = "5", cols = "30">{{faction.first.description}}</textarea>
+            <br>
+            <label for = "fSpecial">Special Rules:</label>
+            <textarea id = "fSpecial" rows = "5", cols = "30">{{faction.first.specialRules}}</textarea>
+        </div>
+
         <br>
-        <label for = "fSpecial">Special Rules:</label>
-        <textarea id = "fSpecial" rows = "5", cols = "30">{{faction.first.specialRules}}</textarea>
-    </div>
-
-    <br>
-    <h2>Units</h2>
-    <div class = "addButtonBox">
-        <button class = "addButton"> Add Hero</button>
-        <button class = "addButton"> Add Hearthguard</button>
-        <button class = "addButton"> Add Warrior</button>
-        <button class = "addButton"> Add Levy</button>
-    </div>
-    <!--Unit Input Fields-->
-    <div style = "width: 75%; margin: 0 auto;">
-        <!--This is the outer table-->
-        <table id = "{{faction.first.id}}">
-            <tr>
-            <th>Type</th>
-            <th>Unit</th>
-            <th>Saga Dice</th>
-            <th>Models</th>
-            <th>Equipment Options</th>
-            <th>Armour Melee</th>
-            <th>Armour Ranged</th>
-            <th>Aggression Melee</th>
-            <th>Aggression Ranged</th>
-            <th>Special Rules</th>
-            <th>Legendary?</th>
-            <th>Cost</th>
-            </tr>
-        
-            <!--Populate Table Data-->
-            <!--Get the QuerySet containing the units -->
-            {% for collection in unitSet %}
-                
-            <!-- Get the unit from the QuerySet -->
-                {% for unit in collection %}
-                    <!--track the id for each unit-->
-                    <tr id = "{{unit.id}}">
-                        <td>
-                            <select>
-                                {% for tuple in options.unitOptions %}
-                                    <option value = "{{ tuple.0 }}" {%if tuple.1 == unit.unitType %} selected {%endif%}>{{tuple.1}}</option>     
-                                {% endfor %}
-                            </select>
-                        </td>
-                        <!--autoescape to read spaces in the unit name-->
-                        <td><input type = "text"  value = "{% autoescape off %}{{unit.unitName}}{% endautoescape %}"></td>
-                        <td><input type = "number" class = "shrinkInput" min = "0"  value = {{unit.sagaDice}}></td>
-                        <td><input type = "number" class = "shrinkInput" min = "0"  value = {{unit.numModels}}></td>
-                        <td>
-                            <select>
-                                {% for tuple in options.equipmentOptions %}
-                                    <option value = "{{ tuple.0 }}" {%if tuple.1 == unit.equipment %} selected {%endif%}>{{tuple.1}}</option> 
-                                {% endfor %}
-                            </select>
-                        </td>
-                        <td><input type = "number" class = "shrinkInput" min = "0" value = {{unit.armourMelee}}></td>
-                        <td><input type = "number" class = "shrinkInput" min = "0" value = {{unit.armourRanged}}></td>
-                        <td><input type = "number" class = "shrinkInput" min = "0" value = {{unit.aggMelee}}></td>
-                        <td><input type = "number" class = "shrinkInput" min = "0" value = {{unit.aggRanged}}></td>
-                        <td><textarea>{{ unit.specialRules }}</textarea></td>
-                        <td><input type = "checkbox" {%if unit.isLegendary %} checked {% endif %}></td>
-                        <td><input type = "number" class = "shrinkInput" value = {{unit.cost}}></td>
-                        <!--Delete Button-->
-                        <td><button class = "deleteRow">Delete</button></td>
-                    </tr>
+        <h2>Units</h2>
+        <!--Submit / Delete Form -->
+        <div class = "submitButtonBox">
+            <button id = "saveSubmit">Save Changes</button>
+            <button id = "deleteSubmit">Delete Faction</button>
+        </div>
+        <!--Table Container -->
+        <div style = "width: 75%; margin: 0 auto;">
+            <!--Buttons To Add Units To The Table-->
+            <div class = "addButtonBox">
+                <button class = "addButton" id = "addHero"> Add Hero</button>
+                <button class = "addButton" id = "addHearthguard"> Add Hearthguard</button>
+                <button class = "addButton" id = "addWarrior"> Add Warrior</button>
+                <button class = "addButton" id = "addLevy"> Add Levy</button>
+            </div>
+            <!--Store the hidden faction id field-->
+            <input type = "hidden" name = "factionId" value = "{{faction.first.id}}">
+            <!--Unit Form Fields-->
+            <table>
+                <tr>
+                    <th>Type</th>
+                    <th>Unit</th>
+                    <th>Saga Dice</th>
+                    <th>Models</th>
+                    <th>Equipment Options</th>
+                    <th>Armour Melee</th>
+                    <th>Armour Ranged</th>
+                    <th>Aggression Melee</th>
+                    <th>Aggression Ranged</th>
+                    <th>Special Rules</th>
+                    <th>Legendary?</th>
+                    <th>Cost</th>
+                </tr>
+                <!--Populate Table Data-->
+                <!--Get the QuerySet containing the units -->
+                {% for collection in unitSet %}
+                    <!-- Get the unit from the QuerySet -->
+                    {% for unit in collection %}
+                        <tr>
+                            <!--Store the hidden unit id field-->
+                            <input type = "hidden" name="unitId" value="{{unit.id}}">
+                            <td>
+                                <select name = "unitType">
+                                    {% for tuple in options.unitOptions %}
+                                        <option value = "{{ tuple.0 }}" {%if tuple.1 == unit.unitType %} selected {%endif%}>{{tuple.1}}</option>     
+                                    {% endfor %}
+                                </select>
+                            </td>
+                            <!--autoescape to read spaces in the unit name-->
+                            <td><input type = "text" name = "unitName"  value = "{% autoescape off %}{{unit.unitName}}{% endautoescape %}"></td>
+                            <td><input type = "number" name = "sagaDice" class = "shrinkInput" min = "0"  value = {{unit.sagaDice}}></td>
+                            <td><input type = "number" name = "numModels" class = "shrinkInput" min = "0"  value = {{unit.numModels}}></td>
+                            <td>
+                                <select name = "equipment">
+                                    {% for tuple in options.equipmentOptions %}
+                                        <option value = "{{ tuple.0 }}" {%if tuple.1 == unit.equipment %} selected {%endif%}>{{tuple.1}}</option> 
+                                    {% endfor %}
+                                </select>
+                            </td>
+                            <td><input type = "number" name = "armourMelee" class = "shrinkInput" min = "0" value = {{unit.armourMelee}}></td>
+                            <td><input type = "number" name = "armourRanged" class = "shrinkInput" min = "0" value = {{unit.armourRanged}}></td>
+                            <td><input type = "number" name = "aggMelee" class = "shrinkInput" min = "0" step = "0.01" value = {{unit.aggMelee}}></td>
+                            <td><input type = "number" name = "aggRanged" class = "shrinkInput" min = "0" step = "0.01" value = {{unit.aggRanged}}></td>
+                            <td><textarea name = "specialRules">{{ unit.specialRules }}</textarea></td>
+                            <td><input type = "checkbox" name = "isLegendary" {%if unit.isLegendary %} checked {% endif %}></td>
+                            <td><input type = "number" name = "cost" class = "shrinkInput" value = {{unit.cost}}></td>
+                            <!--Delete Button-->
+                            <td><button class = "deleteRow">Delete</button></td>
+                        </tr>
+                    {% endfor %}   
                 {% endfor %}
-                
-            {% endfor %}
-        </table>
-    </div>
-
+            </table>
+        </div>
+    </form>
 </body>
 
 </html>
